style.css
/* 
Theme Name: Crommo Theme
Author: Mike de Geofroy
Description: The Theme of the crommo web page.
Version: 1.0
Text Domain: crommo
*/

@charset "UTF-8";
/* CSS Document */

html,body{
    padding: 0;
    margin: 0;
    font-family: 'Roboto';
}
 

.headercontainer{
    position: fixed;
    background-color: white;
    z-index: 9999;
}

#header{
    height: 10vh;
    min-height: 60px;
    top: 0;
    width: 100vw;
}

#header a:not(#logo){
    display: inline-block;
    text-decoration: none;
    color: black;
    font-weight: 300;
    margin-left: 50px;
}

#logo img{
    height: 5vh;
    float: right;
    margin-right: 100px;
}

#marquee{
    background-color: #7df487;
    height: 4vh;
    width: 100vw;
    font-weight: 300;
    overflow: hidden;
    min-height: 25px;
    overflow:hidden;
    white-space: nowrap;
}

#marquee p {
    white-space: nowrap;
}

@media(max-width: 800px){
    #header a:not(#logo){
        display: none;
    }

    #logo img{
        margin-right: 25px;
    }
}

.postcontainer{
    width: 75vw;
    z-index: 1;
    padding-top: 14vh;
    margin-right: auto;
    margin-left: auto;
    min-height:100%;
}

.homepageslider{
    width: 75vw;
    z-index: 1;
    padding-top: 18vh;
    margin-right: auto;
    margin-left: auto;
}

.post{
    width: 40%;
    height: auto;
}

.slidepost{
    width: 100%;
    height: auto;
}

.slidepost img{
    width: 49%;
}

.post h1{
    width: 50%;
}

.footer{
    bottom: 0px;
    height: 15vh;
}

.footer img{
    height: 4vh;
    margin-left: 4vh;
    margin-top: 4.5vh;
}

b{
    font-weight: 900;
}

h1{
    line-height: 0.7em;
}

.follow{
    font-weight: 300;
    text-align: center;
}

.follow a{
    text-decoration: none !important;
}

.info a{
    float: right;
    color: black;
    text-decoration: none;
    font-family: 'Roboto';
    font-weight: 300;
    font-size: small;
}

.info{
    float: right;
    margin: 4vh;
    width: 50vw;
}

.instagramcontainer{
    position: relative;
}

